# chroma-admin-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
chroma_cli/: main.py
